--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image">
-								<img src="images/Yahye kiyton.jpg" alt="" data-position="center center" style="width: 100px; height: 100px;" />
+								<img src="Images/coding1.jpeg" alt="" data-position="center center" style="width: 100px; height: 100px;" />
 							</a>							
 							<div class="content">
 								<div class="inner">
@@ -62,7 +62,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="Yahye Kiyton" data-position="top center" /></a>
+							<a href="#" class="image"><img src="Images/walmart1.png" alt="Yahye Kiyton" data-position="top center" style="width: 20px; height: 40px;" margin-left = "100px" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Experience</h2>
@@ -74,7 +74,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="Yahye Kiyton" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="Images/resume.jpeg" alt="Yahye Kiyton" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Resume</h2>
@@ -148,7 +148,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="https://github.com/Yahyeabdi1/Ai-Card-Tournament" class="button">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
